# owner-signal-terminal

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  skills.md
examples/: canonical.nota
schema/: owner-signal-terminal.concept.schema
src/: lib.rs
tests/: round_trip.rs
