[package]
name         = "owner-signal-terminal"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/owner-signal-terminal"
description  = "OwnerSignal contract for privileged terminal session lifecycle."
publish      = false

[lib]
name = "owner_signal_terminal"
path = "src/lib.rs"

[dependencies]
signal-frame            = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona          = { git = "https://github.com/LiGoldragon/signal-persona.git" }
signal-terminal = { git = "https://github.com/LiGoldragon/signal-terminal.git", branch = "main" }
nota-codec              = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv                    = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror               = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
